syntax = "proto3";

option csharp_namespace = "WorldTime.gRPC";

package WorldTime;

service WorldTime {
    rpc GetTime (Point) returns (WorldTimeReply);
}

message WorldTimeReply {
    string localtime = 1;
}

message Point {
    double latitude = 1;
    double longitude = 2;
}
